# Lab.2

./: CMakeLists.txt  Funkcijos.cpp  Funkcijos_list.cpp  README.md  Struktura.h  main.cpp  main_list.cpp
NewFolder/: Funkcijos_deque.cpp  Struktura_deque.h  Struktura_list.h  main_deque.cpp
Unit_Tests/: CMakeLists.txt  Unit_Test.cpp
html/: _struktura_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  dir_1c638e644319a71c83356ab3e425f9ea.html  dir_1f149d26625618fa415597f278c6312a.html  dir_88a2322fb368544865464b5b024f5973.html  dir_8ab8ad27521a9d23870bbdcbd244c986.html  dir_e04ae2849dfa520b4ee2c9f7e9ff15de.html  doxygen_crawl.html  files.html  hierarchy.html  index.html
latex/: _struktura_8h_source.tex  class_studentas.tex  class_zmogus.tex  files.tex  refman.tex
